panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__constexpr__test_error_constexpr_error_in_static_initialisation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: left shift of negative value in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:1:16]
   │
 1 │ static int a = -1 << 1;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:2:21]
   │
 2 │ static int b = 1 << -1;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:3:21]
   │
 3 │ static int c = 1 >> -1;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:4:21]
   │
 4 │ static int d = 1 << 32;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:5:16]
   │
 5 │ static int e = 1 << 31;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:6:21]
   │
 6 │ static int f = 1 << 0x1'0000'0000;
   │                     ──────┬──────  
   │                           ╰──────── in this expression of type `long`
───╯

Error: division by zero in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:8:20]
   │
 8 │ static int g = 1 / 0;
   │                    ┬  
   │                    ╰── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:9:16]
   │
 9 │ static int h = (-0x7fff'ffff - 1) / -1;
   │                ───────────┬───────────  
   │                           ╰───────────── in this expression of type `int`
───╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:11:20]
    │
 11 │ static int i = 1 % 0;
    │                    ┬  
    │                    ╰── in this expression of type `int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:12:16]
    │
 12 │ static int j = (-0x7fff'ffff - 1) % -1;
    │                ───────────┬───────────  
    │                           ╰───────────── in this expression of type `int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:15:17]
    │
 15 │ static int k = (0x7fff'ffff + 1) << 0x1'0000'0000;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: shift count exceeds size of shifted type in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:15:37]
    │
 15 │ static int k = (0x7fff'ffff + 1) << 0x1'0000'0000;
    │                                     ──────┬──────  
    │                                           ╰──────── in this expression of type `long`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:16:17]
    │
 16 │ static int l = (0x7fff'ffff + 1) << 100;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: shift count exceeds size of shifted type in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:16:37]
    │
 16 │ static int l = (0x7fff'ffff + 1) << 100;
    │                                     ─┬─  
    │                                      ╰─── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:18:26]
    │
 18 │ static unsigned m = 1u / 0u;
    │                          ─┬  
    │                           ╰── in this expression of type `unsigned int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:19:26]
    │
 19 │ static unsigned n = 1u % 0u;
    │                          ─┬  
    │                           ╰── in this expression of type `unsigned int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:22:17]
    │
 22 │ static int o = (0x7fff'ffff + 1) / 0;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:22:36]
    │
 22 │ static int o = (0x7fff'ffff + 1) / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:16]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                ─────────────  
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:16]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                ─────────────────────  
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:36]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:27:21]
    │
 27 │ static int q = (1 / 0, 0);
    │                     ┬  
    │                     ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:28:24]
    │
 28 │ static int r = (1, 1 / 0);
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:29:21]
    │
 29 │ static int s = (1 / 0, 1 / 0);
    │                     ┬  
    │                     ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:29:28]
    │
 29 │ static int s = (1 / 0, 1 / 0);
    │                            ┬  
    │                            ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:32:24]
    │
 32 │     static int a = 1 / 0 && 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:33:29]
    │
 33 │     static int b = 1 && 1 / 0;
    │                             ┬  
    │                             ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:35:29]
    │
 35 │     static int c = 0 || 1 / 0;
    │                             ┬  
    │                             ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:36:24]
    │
 36 │     static int d = 1 / 0 || 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:40:28]
    │
 40 │     static int a = 1 ? 1 / 0 : 1 / 0;
    │                            ┬  
    │                            ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:41:36]
    │
 41 │     static int b = 0 ? 1 / 0 : 1 / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:43:24]
    │
 43 │     static int c = 1 / 0 ? 1 / 0 : 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:51:53]
    │
 51 │     static struct T a = (struct T){.x = 1, .y = 1 / 0};
    │                                                     ┬  
    │                                                     ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:55:28]
    │
 55 │ static int t = ((void)(1 / 0), 42);
    │                            ┬  
    │                            ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:60:23]
    │
 60 │     static int* c = &*b;
    │                       ─  
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:64:25]
    │
 64 │     static int x = (1 / 0) << (1 / 0);
    │                         ┬  
    │                         ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:64:36]
    │
 64 │     static int x = (1 / 0) << (1 / 0);
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:70:36]
    │
 70 │     static int comparison_result = &x < &y;
    │                                    ───────  
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:77:47]
    │
 77 │     static struct T value = {.bitfield = (1 / 0) * (1 / 0)};
    │                                               ┬  
    │                                               ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:77:57]
    │
 77 │     static struct T value = {.bitfield = (1 / 0) * (1 / 0)};
    │                                                         ┬  
    │                                                         ╰── in this expression of type `int`
────╯

Error: overflow in pointer difference in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:81:27]
    │
 81 │     static long a = (int*)0xffff'ffff'ffff'fff0 - (int*)4;
    │                           ───────────────┬───────────────  
    │                                          ╰───────────────── in this expression of type `long`
────╯

Error: arithmetic on unaligned pointer in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:82:21]
    │
 82 │     static long b = ((int*)25) - (int*)20;
    │                     ──────────┬──────────  
    │                               ╰──────────── in this expression of type `long`
────╯

Error: overflow in object size calculation in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:84:21]
    │
 84 │     static long c = &xs - &xs;
    │                     ────┬────  
    │                         ╰────── in this expression of type `long`
────╯

Error: overflow in object size calculation in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:89:21]
    │
 89 │     static int* p = &a + 0x7fff'ffff'ffff'0000;
    │                     ─────────────┬────────────  
    │                                  ╰────────────── in this expression of type `ptr<int>`
────╯

Error: overflow in pointer addition in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:90:22]
    │
 90 │     static int* p2 = &a - 1;
    │                      ───┬──  
    │                         ╰──── in this expression of type `ptr<int>`
────╯

Error: overflow in pointer addition in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:91:28]
    │
 91 │     static int* p3 = (int*)20 - 10;
    │                            ───┬───  
    │                               ╰───── in this expression of type `ptr<int>`
────╯

Error: overflow in object size calculation in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:93:22]
    │
 93 │     static int* p4 = &xs + 1;
    │                      ─┬─  
    │                       ╰─── in this expression of type `ptr<array<int; 2305843009213693952>>`
────╯

Error: division by zero in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:103:18]
     │
 103 │         .a = 1 / 0,
     │                  ┬  
     │                  ╰── in this expression of type `int`
─────╯

Error: signed overflow in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:104:14]
     │
 104 │         .b = 0x7fff'ffff + 1,
     │              ───────┬───────  
     │                     ╰───────── in this expression of type `int`
─────╯

Error: division by zero in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:113:40]
     │
 113 │     static int x = (struct T){.x = 1 / 0, .y = 1 >> 100}.x;
     │                                        ┬  
     │                                        ╰── in this expression of type `int`
─────╯

Error: shift count exceeds size of shifted type in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:113:53]
     │
 113 │     static int x = (struct T){.x = 1 / 0, .y = 1 >> 100}.x;
     │                                                     ─┬─  
     │                                                      ╰─── in this expression of type `int`
─────╯

Error: division by zero in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:114:40]
     │
 114 │     static int y = (struct T){.x = 1 / 0, .y = 1 >> 100}.y;
     │                                        ┬  
     │                                        ╰── in this expression of type `int`
─────╯

Error: shift count exceeds size of shifted type in constant expression
     ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:114:53]
     │
 114 │     static int y = (struct T){.x = 1 / 0, .y = 1 >> 100}.y;
     │                                                     ─┬─  
     │                                                      ╰─── in this expression of type `int`
─────╯
